--- a/WebContent/css/jappy.css
+++ b/WebContent/css/jappy.css
@@ -1,62 +1,42 @@
+html,
 body {
-	padding-top: 50px;
+  height: 100%;
+  /* The html and body elements cannot have any padding or margin. */
 }
 
-#masthead {
-	min-height: 270px;
-	background-color: #000044;
-	color: #aaaacc;
+/* Wrapper for page content to push down footer */
+#wrap {
+  min-height: 100%;
+  height: auto;
+  /* Negative indent footer by its height */
+  margin: 0 auto -60px;
+  /* Pad bottom by footer height */
+  padding: 0 0 60px;
 }
 
-#masthead h1 {
-	font-size: 55px;
-	line-height: 1;
+/* Set the fixed height of the footer here */
+#footer {
+  height: 60px;
+  background-color: #f5f5f5;
 }
 
-#masthead .well {
-	margin-top: 13%;
-	background-color: #111155;
-	border-color: #000033;
+
+/* Custom page CSS
+-------------------------------------------------- */
+/* Not required for template or sticky footer method. */
+
+#wrap > .container {
+  padding: 60px 15px 0;
+}
+.container .text-muted {
+  margin: 20px 0;
 }
 
-.icon-bar {
-	background-color: #fff;
+#footer > .container {
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
-#masthead h1 {
-	font-size: 80px;
-}
-
-.navbar-bright {
-	background-color: #111155;
-	color: #fff;
-}
-
-.navbar-bright a,#masthead a,#masthead .lead {
-	color: #aaaacc;
-}
-
-.navbar-bright li>a:hover {
-	background-color: #000033;
-}
-
-.affix-top,.affix {
-	position: static;
-}
-
-#sidebar.affix-top {
-	position: static;
-	margin-top: 30px;
-	width: 228px;
-}
-
-#sidebar.affix {
-	position: fixed;
-	top: 70px;
-	width: 228px;
-}
-
-#sidebar li.active {
-	border: 0 #eee solid;
-	border-right-width: 4px;
+code {
+  font-size: 80%;
 }
